<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.packclese.PrivacyPolicyFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/TextView.PoppinsNormal16sp020202"
            android:layout_margin="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Privacy Policy" />

        <TextView
            style="@style/TextView.PoppinsNormal14sp8D92A3"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacyPolicy" />

        <TextView
            style="@style/TextView.PoppinsNormal16sp020202"
            android:layout_margin="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Information Collection and Use" />

        <TextView
            style="@style/TextView.PoppinsNormal14sp8D92A3"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/InformationCollectionAndUse" />

        <TextView
            style="@style/TextView.PoppinsNormal16sp020202"
            android:layout_margin="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Log Data" />

        <TextView
            style="@style/TextView.PoppinsNormal14sp8D92A3"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logData" />

        <TextView
            style="@style/TextView.PoppinsNormal16sp020202"
            android:layout_margin="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cookies" />

        <TextView
            style="@style/TextView.PoppinsNormal14sp8D92A3"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cookies" />

        <TextView
            style="@style/TextView.PoppinsNormal16sp020202"
            android:layout_margin="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Service Providers" />

        <TextView
            style="@style/TextView.PoppinsNormal14sp8D92A3"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/serviceProviders" />

        <TextView
            style="@style/TextView.PoppinsNormal16sp020202"
            android:layout_margin="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Security" />

        <TextView
            style="@style/TextView.PoppinsNormal14sp8D92A3"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/security" />

        <TextView
            style="@style/TextView.PoppinsNormal16sp020202"
            android:layout_margin="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Links to Other Sites" />

        <TextView
            style="@style/TextView.PoppinsNormal14sp8D92A3"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/linkstoOtherSites" />

        <TextView
            style="@style/TextView.PoppinsNormal16sp020202"
            android:layout_margin="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Children’s Privacy" />

        <TextView
            style="@style/TextView.PoppinsNormal14sp8D92A3"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/childrensPrivacy" />

        <TextView
            style="@style/TextView.PoppinsNormal16sp020202"
            android:layout_margin="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Changes to This Privacy Policy" />

        <TextView
            style="@style/TextView.PoppinsNormal14sp8D92A3"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ChangestoThisPrivacyPolicy" />

        <TextView
            style="@style/TextView.PoppinsNormal16sp020202"
            android:layout_margin="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Contact Us" />

        <TextView
            style="@style/TextView.PoppinsNormal14sp8D92A3"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contactUs" />

    </LinearLayout>
</ScrollView>
