<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.packclese.TermsConditionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/TextView.PoppinsNormal16sp020202"
            android:layout_margin="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Term and Condition" />

        <TextView
            style="@style/TextView.PoppinsNormal14sp8D92A3"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TermsConditions" />

        <TextView
            style="@style/TextView.PoppinsNormal16sp020202"
            android:layout_margin="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Changes to This Term and Condition" />

        <TextView
            style="@style/TextView.PoppinsNormal14sp8D92A3"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ChangestoThisTermsandConditions" />

        <TextView
            style="@style/TextView.PoppinsNormal16sp020202"
            android:layout_margin="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Contact Us" />

        <TextView
            style="@style/TextView.PoppinsNormal14sp8D92A3"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contactUs2" />

    </LinearLayout>

</ScrollView>